@@ -2,7 +2,7 @@ DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer2-2.0_p20111126.tar.xz 3334504 RMD160 8fb6dc468cc754a87589ff5099c7ee68551dd69a SHA1 57e9449adfedf19a97be1ec1e6602fa2289aa698 SHA256 95229eac3b1c481462fdb720caa2f6a8754b4f38ce70c6a328e18f8548add16d
-EBUILD mplayer2-2.0_p20111126.ebuild 16719 RMD160 3c8be4c64e848e786e2edfe0043f442026b7fe06 SHA1 dd410c79b8da30142fba8c6907898c6299579cfa SHA256 19b9ec99b95555efe7821c5df3bf005b192ce29f4968b7ab158230ef7fce89d5
-EBUILD mplayer2-9999.ebuild 16711 RMD160 fb1849cfa97656f4dd1c597fab4ab142cbdbce29 SHA1 1eb17133ac707aabd6605583c1b303410a7d66fb SHA256 472731557ec305c6dbff129e298536832e2fbf7d598db0ff8a0c209496b333c3
-MISC ChangeLog 5306 RMD160 422f545f240e880c7e75d24f4c2805122fdbff54 SHA1 3954686af50e444e19f49fdb99ffc45918db29f7 SHA256 351ab58c0ab454b972aed57571fbeae125de0e2622ff19ae4788f75c729ecace
+EBUILD mplayer2-2.0_p20111126.ebuild 16718 RMD160 7b8a556cf9eda13099ec21745cdd075f376e9acb SHA1 df4589d5c070420093a7cf19a7e5200e7cdc83a3 SHA256 1ed22d519d52f2efb232b876f3d3943fc405ab36edd2796bc944f73fe7d4e063
+EBUILD mplayer2-9999.ebuild 16710 RMD160 48868703327e96b83b401d5d4d002df274ba3f61 SHA1 a6a6aa168ef03f03d3093882694f65aaa91bed27 SHA256 c1fef9858d582ccaf98536f5e39adc5182b473b5da052263488a0036f370507b
+MISC ChangeLog 5488 RMD160 011e0791fdc5b449ea372ea8e3f3ddcc52a4e179 SHA1 d2e31daa48f230f17e6eec78f4a3d8686fc838d0 SHA256 b367126a670d10ed0cfe4c75b1ba573273c01550a4d73e7b26dbdb53a637062e
 MISC metadata.xml 4045 RMD160 1164dbcf2589db4faf609c819592fffa88489ded SHA1 edb3a67eb6246e3e190810cbf7d118b23919bcd5 SHA256 13e5f9cb420b9160e7e4ae091d0ef57fe53bcdb7b10b9c873be8331312c1faa7
