@@ -1,6 +1,11 @@
 # ChangeLog for media-video/mplayer2
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 Feb 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20111126.ebuild,
+  mplayer2-9999.ebuild:
+  update linuxtv-dvb-headers category, bug #403929, thanks to Muzer and
+  timemanx
 
   01 Dec 2011; Nikoli <nikoli@lavabit.com> -mplayer2-2.0_p20110904.ebuild,
   mplayer2-2.0_p20111126.ebuild, mplayer2-9999.ebuild, metadata.xml:
